feat(t-4957982926):  1、iOS端支持日志文件和server输出；2、iOS支持日志文件读取和展示；3、优化日志格式；4、支持日志清楚；5、优化日志接口

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  #应用实时监控服务ARMS
+  alibabacloud_rum_flutter_plugin: ^0.2.3
 
 dev_dependencies:
   integration_test:
